--- a/views/header.html
+++ b/views/header.html
@@ -184,6 +184,7 @@
       <div class="robot">
         <h1>Congratulations!</h1>
         <h2>
+          Hello Kanhaiya Singh
           You just deployed your first app with<br/>
           AWS OpsWorks.
         </h2>
