--- a/views/header.html
+++ b/views/header.html
@@ -183,7 +183,7 @@
      <div class="hero-unit">
       <div class="robot">
         <h1>Congratulations!</h1>
-        <h2>
+        <h2>Hello Kanhaiya</br>
           You just deployed your first app with<br/>
           AWS OpsWorks.
         </h2>
